--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,20 +1,5 @@
 ---
 ---
-@book{Casillas-Trasvina2025b,
-  bibtex_show={true},
-  abstract = {Key to the African water crisis, often referred to in international forums, is the large spatial and temporal variability of resource availability, the arid climate prevalent in about 60% of the African continent, and the widespread lack of skilled and experienced human resources to manage the irregular availability of water. Provision of sufficient storage capacity under growing water demand and increasing climate variability is one of the main concerns for water managers in the region in the coming decades. The natural storage in aquifers makes conjunctive use of water resources and artificial recharge of aquifers particularly attractive in the region. Excellent progress has been made with all knowledge-related aspects and promotion of artificial recharge in South Africa. This has been driven by the Water Research Commission, with its research and development programmes, for nearly fifty years now. Among other projects, it led to the construction of a major borehole injection scheme for the City of Windhoek, Namibia. Windhoek’s MAR (managed aquifer recharge) scheme is of particular interest because it involves large-scale borehole injection and recovery in a highly complex, fractured quartzite aquifer. Implementation in South Africa was helped by the detailed Artificial Recharge Strategy developed by the national Department of Water Affairs and Forestry. With 17 reported cases, South Africa has by far the highest MAR implementation in Africa. With this as background, six cases are discussed, covering different physical and management environments and recharge methods in southern Africa. They are structured to bring out an understanding of the different driving forces towards the use of MAR techniques, factors that affect the selection of a particular MAR technique, and how efficient and effective various MAR techniques have proven to be. The main stumbling block to a much greater, systematic roll-out of this technology has been a lack of appropriate governance and institutional development for the sustainable utilisation and management of groundwater resources in South Africa. This has been a failing in Africa in general, despite groundwater’s strategic role as an essential resource to help achieve community development and poverty alleviation.},
-  doi = {10.21083/978-1-77470-006-8},
-  isbn = {978-1-77470-123-2},
-  preview={2025-managed-aquifer-recharge-Africa.jpg},
-  year = {2025},
-  journal = {The Groundwater Project},
-  title = {{Almacenamiento de Agua Subterranea en Acuiferos Confinados}},
-  author = {Braune, Eberhard and Israel, Sumaya and Casillas-Trasvina, Alberto and Encalada, Maria Loreto and Garay, Pamela and Guerrero, Pablo and Huamani, Alfredo and Reyna Martinez, Juan Bautista and Riquelme, Joaquin and Torres, Susana and Zhong, Lei},
-  month = {jan},
-  pages = {118},
-  url = {https://gw-project.org/books/managed-aquifer-recharge-southern-africa/},
-  note={The original version in English was translated into Spanish by a team of translators lead by Casillas-Trasvina, Alberto for The Groundwater Project}
-}
 @article{Casillas-Trasvina2025,
   bibtex_show={true},
   abstract = {The Turlock and Modesto subbasins in California’s Central Valley face critical groundwater sustainability challenges exacerbated by historical overdraft and recurrent drought. This study develops a high-resolution, integrated hydrologic model to enhance understanding of recharge processes, groundwater dynamics, and sustainable management strategies under the Sustainable Groundwater Management Act (SGMA). The model integrates spatially distributed Hydrogeologic Response Units (HGRUs) using HYDRUS-1D for variably saturated flow and MODFLOW-2005 for 3D groundwater flow, all at a high spatial resolution of 300 by 300 m. Key findings from this integrated method include spatially varying recharge rates ranging from 0.5 mm to 1460 mm per year across the model domain, with higher rates observed in cultivated areas dominated by almond, walnut and diverse grain crops and in regions associated with lakes and reservoirs. The study confirms intensive groundwater pumping in East Turlock as a significant driver of a regional cone of depression that impacts groundwater levels throughout the area. Advective particle tracking reveals faster flow paths from elevated recharge zones towards the cone of depression and groundwater residence times that range from 2 to 5000 years, with an average of 636 years. This research enhances the understanding of groundwater dynamics crucial for formulating effective management strategies under SGMA. By delineating recharge patterns and groundwater flow paths, this study provides water managers with actionable insights to optimize recharge efforts, prioritize areas for managed aquifer recharge, and develop targeted interventions to mitigate overdraft impacts and preserve aquifer resources in the Central Valley of California.},
@@ -30,20 +15,20 @@
   url = {https://www.sciencedirect.com/science/article/abs/pii/S0022169425007152},
   volume = {660}
 }
-@book{Casillas-Trasvina2024b,
+@book{Casillas-Trasvina2025b,
   bibtex_show={true},
-  abstract = {Los acuíferos subterraneos son la fuente de agua para el 70 por ciento del uso de riego en el mundo. Muchos de estos acuíferos han experimentado fuertes caídas en la presión del agua y están en peligro por el consumo excesivo. Exportar un tomate o una almendra es una transferencia del banco de agua de una región. La invisibilidad del agua subterránea hace que su gestión dependa de la comprensión del entorno geológico y la física de la extracción. Cuando un gran número de colonos no nativos comenzaron a cultivar en el Territorio de Dakota de los Estados Unidos a fines del siglo XIX, el Servicio Geológico de los Estados Unidos emprendió estudios de aguas subterráneas que continuarían durante casi un siglo. Este libro ofrece una introducción histórica al descubrimiento del papel de la deformación del acuífero en respuesta al bombeo de pozos. El autor de este libro se ha involucrado en varias décadas de enseñanza e investigación en las disciplinas de mecánica de rocas e hidrogeología. Este libro se basa en la ponencia/clase de hidrogeología del autor sobre la "Saga de la piedra arenisca de Dakota" en la que la moraleja de la historia es que el estudio de la extracción de agua subterránea de los acuíferos confinados es donde se encuentran las dos disciplinas.},
-  doi = {10.21083/978-1-7770541-7-5},
-  isbn = {978-1-77470-102-7},
-  preview={2024-groundwater_storage.png},
-  year = {2024},
+  abstract = {Key to the African water crisis, often referred to in international forums, is the large spatial and temporal variability of resource availability, the arid climate prevalent in about 60% of the African continent, and the widespread lack of skilled and experienced human resources to manage the irregular availability of water. Provision of sufficient storage capacity under growing water demand and increasing climate variability is one of the main concerns for water managers in the region in the coming decades. The natural storage in aquifers makes conjunctive use of water resources and artificial recharge of aquifers particularly attractive in the region. Excellent progress has been made with all knowledge-related aspects and promotion of artificial recharge in South Africa. This has been driven by the Water Research Commission, with its research and development programmes, for nearly fifty years now. Among other projects, it led to the construction of a major borehole injection scheme for the City of Windhoek, Namibia. Windhoek’s MAR (managed aquifer recharge) scheme is of particular interest because it involves large-scale borehole injection and recovery in a highly complex, fractured quartzite aquifer. Implementation in South Africa was helped by the detailed Artificial Recharge Strategy developed by the national Department of Water Affairs and Forestry. With 17 reported cases, South Africa has by far the highest MAR implementation in Africa. With this as background, six cases are discussed, covering different physical and management environments and recharge methods in southern Africa. They are structured to bring out an understanding of the different driving forces towards the use of MAR techniques, factors that affect the selection of a particular MAR technique, and how efficient and effective various MAR techniques have proven to be. The main stumbling block to a much greater, systematic roll-out of this technology has been a lack of appropriate governance and institutional development for the sustainable utilisation and management of groundwater resources in South Africa. This has been a failing in Africa in general, despite groundwater’s strategic role as an essential resource to help achieve community development and poverty alleviation.},
+  doi = {10.21083/978-1-77470-006-8},
+  isbn = {978-1-77470-123-2},
+  preview={2025-managed-aquifer-recharge-Africa.jpg},
+  year = {2025},
   journal = {The Groundwater Project},
-  title = {{Almacenamiento de Agua Subterranea en Acuiferos Confinados}},
-  author = {Wang, H.F. and Casillas-Trasvina, Alberto},
-  month = {apr},
-  pages = {25},
-  url = {https://gw-project.org/books/groundwater-storage-in-confined-aquifers]/},
-  note={The original version in English was translated into Spanish by Casillas-Trasvina, Alberto for The Groundwater Project}
+  title = {{Recarga Gestionada de Acuiferos: Sur de Africa}},
+  author = {Braune, Eberhard and Israel, Sumaya and Casillas-Trasvina, Alberto and Encalada, Maria Loreto and Garay, Pamela and Guerrero, Pablo and Huamani, Alfredo and Reyna Martinez, Juan Bautista and Riquelme, Joaquin and Torres, Susana and Zhong, Lei},
+  month = {jan},
+  pages = {118},
+  url = {https://gw-project.org/books/managed-aquifer-recharge-southern-africa/},
+  note={The original version in English was translated into Spanish by a team of translators lead by Casillas-Trasvina, Alberto for The Groundwater Project}
 }
 @article{Casillas-Trasvina2024,
   bibtex_show={true},
@@ -60,6 +45,21 @@
   url = {https://linkinghub.elsevier.com/retrieve/pii/S004896972406666X},
   volume = {954}
 }
+@book{Casillas-Trasvina2024b,
+  bibtex_show={true},
+  abstract = {Los acuíferos subterraneos son la fuente de agua para el 70 por ciento del uso de riego en el mundo. Muchos de estos acuíferos han experimentado fuertes caídas en la presión del agua y están en peligro por el consumo excesivo. Exportar un tomate o una almendra es una transferencia del banco de agua de una región. La invisibilidad del agua subterránea hace que su gestión dependa de la comprensión del entorno geológico y la física de la extracción. Cuando un gran número de colonos no nativos comenzaron a cultivar en el Territorio de Dakota de los Estados Unidos a fines del siglo XIX, el Servicio Geológico de los Estados Unidos emprendió estudios de aguas subterráneas que continuarían durante casi un siglo. Este libro ofrece una introducción histórica al descubrimiento del papel de la deformación del acuífero en respuesta al bombeo de pozos. El autor de este libro se ha involucrado en varias décadas de enseñanza e investigación en las disciplinas de mecánica de rocas e hidrogeología. Este libro se basa en la ponencia/clase de hidrogeología del autor sobre la "Saga de la piedra arenisca de Dakota" en la que la moraleja de la historia es que el estudio de la extracción de agua subterránea de los acuíferos confinados es donde se encuentran las dos disciplinas.},
+  doi = {10.21083/978-1-7770541-7-5},
+  isbn = {978-1-77470-102-7},
+  preview={2024-groundwater_storage.png},
+  year = {2024},
+  journal = {The Groundwater Project},
+  title = {{Almacenamiento de Agua Subterranea en Acuiferos Confinados}},
+  author = {Wang, H.F. and Casillas-Trasvina, Alberto},
+  month = {apr},
+  pages = {25},
+  url = {https://gw-project.org/books/groundwater-storage-in-confined-aquifers]/},
+  note={The original version in English was translated into Spanish by Casillas-Trasvina, Alberto for The Groundwater Project}
+}
 @article{Meles2024,
   bibtex_show={true},
   abstract = {Managed Aquifer Recharge (MAR) is a promising approach to enhance water supply resilience, but it faces significant challenges, such as limited space and time for recharge activities, as well as uncertain bio-geophysical processes, and complex subsurface flow and heterogeneity. In this review, we assess the viability of hydrology-based approaches to enhance groundwater replenishment and identify missing components in existing groundwater recovery activities. We discuss expanding recharge opportunities to under-utilized sources and locations such as hillslopes and mountain systems. Additionally, we explore the possibilities of using existing road infrastructure to capture runoff and convey it to secondary porosity (alluvial fans, faults and fractures) in the mountain fronts. Conventional MAR approaches are usually implemented on valley floors where restrictive clay layers can impede recharge to deep aquifers, and the presence of legacy contaminants in the root or vadose zones can degrade water quality. Hillslope and mountain recharge strategies offer multiple potential benefits over valley floors when there is improved connectivity and faster recharge to deep aquifers, shallower vadose zones, coarser textured deposits, and better surface water quality. Studies show that hillslope recharge accounts for 15–50% of the recharge to valley floors. To further facilitate the effective expansion of groundwater recharge, we propose landscape modifications encompassing slope correction and implementing biological and structural techniques to repurpose roadside channel systems to slow down and/or store flow in hillslopes. These systems can facilitate groundwater recharge and ultimately contribute to sustainable groundwater management. Innovative scientific analyses can help us understand the impacts of MAR on water quality and quantity, uncover the limitations and strengths of recharge in specific locations, and identify the most effective systems. Addressing these gaps will help us achieve a more resilient and sustainable groundwater future.},
@@ -74,6 +74,35 @@
   pages = {131615},
   url = {https://linkinghub.elsevier.com/retrieve/pii/S0022169424010114},
   volume = {639}
+}
+@article{Casillas-Trasvina2022a,
+  bibtex_show={true},
+  abstract = {Apparent groundwater age dating has been proven useful and robust in understanding water origin and mixing processes, particularly when multiple tracers are considered. However, even though now extensively used, the age tracers have not been widely applied in the general practice of flow and transport model calibration. A multi tracer-study was carried out in the Neogene aquifer in Flanders to quantify the apparent age and construct a joint interpretation for the delineation of different groundwater flow systems. This understanding is critical as part of the safety and feasibility studies for the underlying Boom Clay Formation that has been considered as a potential host rock for the geological disposal of radioactive waste. In this study, we combine evidence from tritium/helium-3 (3H/3He), helium-4 (4He) and radiocarbon (14C) dating as well as stable isotopic ($\delta$18O, $\delta$2H) and hydrochemical signatures in combination with particle tracking-based age distributions from the 3D groundwater flow model. The results of the study indicate that mixing of groundwater with young and old fractions occurs predominantly in the central part of the aquifer which is made evident by the coexistence of 3H (pre and post-bomb pulse Era), 14C and 4He in several groundwater samples. The mixing between water of different origin is also supported by the sampled stable isotopic and hydrochemical composition of groundwater. Particle tracking residence time results show an acceptable agreement with apparent ages derived from age tracers for young (≤100 years) and old (>1000 years) groundwater. Groundwater with ages between 100 and 1000 years is likely a mixture of water with young/old fractions and shows the strongest discrepancies between advective model ages and age tracer based apparent ages. On the basis of our findings, we distinguish between three groundwater flow systems in the Neogene aquifer: i) a shallow/local flow system, with groundwater originating from modern meteoric water; ii) a deep/semi-regional flow system, characterized by old groundwater where the presence of 4Herad is significant; iii) a mixed zone of groundwater flow where the recently infiltrated meteoric water mixes with discharging old groundwater. These results have helped us to refine previously proposed conceptual models for the study area and will in the end reduce uncertainties relevant to the potential future geological disposal of radioactive waste.},
+  doi = {10.1016/j.hydroa.2022.100132},
+  issn = {25899155},
+  preview={2022-age_tracers.png},
+  year = {2022},
+  journal = {Journal of Hydrology X},
+  title = {{Using helium-4, tritium, carbon-14 and other hydrogeochemical evidence to evaluate the groundwater age distribution: The case of the Neogene aquifer, Belgium}},
+  author = {Casillas-Trasvina, Alberto and Rogiers, B. and Beerten, K. and P{\"{a}}rn, J. and Wouters, L. and Walraevens, K.},
+  month = {dec},
+  url = {https://www.sciencedirect.com/science/article/pii/S2589915522000141},
+  volume = {17}
+}
+@article{Casillas-Trasvina2022b,
+  bibtex_show={true},
+  abstract = {Heat is a naturally occurring, widespread groundwater tracer that can be used to identify flow patterns in groundwater systems. Temperature measurements, being relatively inexpensive and effortless to gather, represent a valuable source of information which can be exploited to reduce uncertainties on groundwater flow, and, for example, support performance assessment studies on waste disposal sites. In a lowland setting, however, hydraulic gradients are typically small, and whether temperature measurements can be used to inform us about catchment-scale groundwater flow remains an open question. For the Neogene Aquifer in Flanders, groundwater flow and solute transport models have been developed in the framework of safety and feasibility studies for the underlying Boom Clay formation as a potential host rock for geological disposal of radioactive waste. However, the simulated fluxes by these models are still subject to large uncertainties as they are typically constrained by hydraulic heads only. In the current study, we use a state-of-the-art 3D steady-state groundwater flow model, calibrated against hydraulic head measurements, to build a 3D transient heat transport model, for assessing the use of heat as an additional state variable, in a lowland setting and at the catchment scale. We therefore use temperature–depth (TD) profiles as additional state variable observations for inverse conditioning. Furthermore, a Holocene paleo-temperature time curve was constructed based on paleo-temperature reconstructions in Europe from several sources in combination with land surface temperature (LST) remotely sensed monthly data from 2001 to 2019 (retrieved from NASA's Moderate Resolution Imaging Spectroradiometer, MODIS). The aim of the research is to understand the mechanisms of heat transport and to characterize the temperature distribution and dynamics in the Neogene Aquifer. The simulation results clearly underline advection/convection and conduction as the major heat transport mechanisms, with a reduced role of advection/convection in zones where flux magnitudes are low, which suggests that temperature is also a useful indicator in a lowland setting. Furthermore, the performed scenarios highlight the important roles of (i) surface hydrological features and withdrawals driving local groundwater flow systems and (ii) the inclusion of subsurface features like faults in the conceptualization and development of hydrogeological investigations. These findings serve as a proxy of the influence of advective transport and barrier/conduit role of faults, particularly for the Rauw fault in this case, and suggest that solutes released from the Boom Clay might be affected in similar ways.},
+  doi = {10.5194/hess-26-5577-2022},
+  issn = {1607-7938},
+  preview={2022-hess-heat.png},
+  year = {2022},
+  journal = {Hydrology and Earth System Sciences (HESS)},
+  title = {{Characterizing groundwater heat transport in a complex lowland aquifer using paleo-temperature reconstruction, satellite data, temperature–depth profiles, and numerical models}},
+  author = {Casillas-Trasvina, Alberto and Rogiers, Bart and Beerten, Koen and Wouters, Laurent and Walraevens, Kristine},
+  month = {nov},
+  pages = {5577--5604},
+  url = {https://hess.copernicus.org/articles/26/5577/2022/},
+  volume = {26}
 }
 @phdthesis{Casillas-Trasvina2022d,
   bibtex_show={true},
@@ -98,35 +127,6 @@
   title = {{Joint inversion of radiogenic Helium-4 and hydraulic head observations with a neural network surrogate: Application for the Neogene aquifer, Belgium}},
   url = {https://meetingorganizer.copernicus.org/EGU22/EGU22-11932.html},
   year = {2022}
-}
-@article{Casillas-Trasvina2022b,
-  bibtex_show={true},
-  abstract = {Heat is a naturally occurring, widespread groundwater tracer that can be used to identify flow patterns in groundwater systems. Temperature measurements, being relatively inexpensive and effortless to gather, represent a valuable source of information which can be exploited to reduce uncertainties on groundwater flow, and, for example, support performance assessment studies on waste disposal sites. In a lowland setting, however, hydraulic gradients are typically small, and whether temperature measurements can be used to inform us about catchment-scale groundwater flow remains an open question. For the Neogene Aquifer in Flanders, groundwater flow and solute transport models have been developed in the framework of safety and feasibility studies for the underlying Boom Clay formation as a potential host rock for geological disposal of radioactive waste. However, the simulated fluxes by these models are still subject to large uncertainties as they are typically constrained by hydraulic heads only. In the current study, we use a state-of-the-art 3D steady-state groundwater flow model, calibrated against hydraulic head measurements, to build a 3D transient heat transport model, for assessing the use of heat as an additional state variable, in a lowland setting and at the catchment scale. We therefore use temperature–depth (TD) profiles as additional state variable observations for inverse conditioning. Furthermore, a Holocene paleo-temperature time curve was constructed based on paleo-temperature reconstructions in Europe from several sources in combination with land surface temperature (LST) remotely sensed monthly data from 2001 to 2019 (retrieved from NASA's Moderate Resolution Imaging Spectroradiometer, MODIS). The aim of the research is to understand the mechanisms of heat transport and to characterize the temperature distribution and dynamics in the Neogene Aquifer. The simulation results clearly underline advection/convection and conduction as the major heat transport mechanisms, with a reduced role of advection/convection in zones where flux magnitudes are low, which suggests that temperature is also a useful indicator in a lowland setting. Furthermore, the performed scenarios highlight the important roles of (i) surface hydrological features and withdrawals driving local groundwater flow systems and (ii) the inclusion of subsurface features like faults in the conceptualization and development of hydrogeological investigations. These findings serve as a proxy of the influence of advective transport and barrier/conduit role of faults, particularly for the Rauw fault in this case, and suggest that solutes released from the Boom Clay might be affected in similar ways.},
-  doi = {10.5194/hess-26-5577-2022},
-  issn = {1607-7938},
-  preview={2022-hess-heat.png},
-  year = {2022},
-  journal = {Hydrology and Earth System Sciences (HESS)},
-  title = {{Characterizing groundwater heat transport in a complex lowland aquifer using paleo-temperature reconstruction, satellite data, temperature–depth profiles, and numerical models}},
-  author = {Casillas-Trasvina, Alberto and Rogiers, Bart and Beerten, Koen and Wouters, Laurent and Walraevens, Kristine},
-  month = {nov},
-  pages = {5577--5604},
-  url = {https://hess.copernicus.org/articles/26/5577/2022/},
-  volume = {26}
-}
-@article{Casillas-Trasvina2022a,
-  bibtex_show={true},
-  abstract = {Apparent groundwater age dating has been proven useful and robust in understanding water origin and mixing processes, particularly when multiple tracers are considered. However, even though now extensively used, the age tracers have not been widely applied in the general practice of flow and transport model calibration. A multi tracer-study was carried out in the Neogene aquifer in Flanders to quantify the apparent age and construct a joint interpretation for the delineation of different groundwater flow systems. This understanding is critical as part of the safety and feasibility studies for the underlying Boom Clay Formation that has been considered as a potential host rock for the geological disposal of radioactive waste. In this study, we combine evidence from tritium/helium-3 (3H/3He), helium-4 (4He) and radiocarbon (14C) dating as well as stable isotopic ($\delta$18O, $\delta$2H) and hydrochemical signatures in combination with particle tracking-based age distributions from the 3D groundwater flow model. The results of the study indicate that mixing of groundwater with young and old fractions occurs predominantly in the central part of the aquifer which is made evident by the coexistence of 3H (pre and post-bomb pulse Era), 14C and 4He in several groundwater samples. The mixing between water of different origin is also supported by the sampled stable isotopic and hydrochemical composition of groundwater. Particle tracking residence time results show an acceptable agreement with apparent ages derived from age tracers for young (≤100 years) and old (>1000 years) groundwater. Groundwater with ages between 100 and 1000 years is likely a mixture of water with young/old fractions and shows the strongest discrepancies between advective model ages and age tracer based apparent ages. On the basis of our findings, we distinguish between three groundwater flow systems in the Neogene aquifer: i) a shallow/local flow system, with groundwater originating from modern meteoric water; ii) a deep/semi-regional flow system, characterized by old groundwater where the presence of 4Herad is significant; iii) a mixed zone of groundwater flow where the recently infiltrated meteoric water mixes with discharging old groundwater. These results have helped us to refine previously proposed conceptual models for the study area and will in the end reduce uncertainties relevant to the potential future geological disposal of radioactive waste.},
-  doi = {10.1016/j.hydroa.2022.100132},
-  issn = {25899155},
-  preview={2022-age_tracers.png},
-  year = {2022},
-  journal = {Journal of Hydrology X},
-  title = {{Using helium-4, tritium, carbon-14 and other hydrogeochemical evidence to evaluate the groundwater age distribution: The case of the Neogene aquifer, Belgium}},
-  author = {Casillas-Trasvina, Alberto and Rogiers, B. and Beerten, K. and P{\"{a}}rn, J. and Wouters, L. and Walraevens, K.},
-  month = {dec},
-  url = {https://www.sciencedirect.com/science/article/pii/S2589915522000141},
-  volume = {17}
 }
 @article{Casillas-Trasvina2021,
   bibtex_show={true},
