--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,21 @@
 ---
 @article{Casillas-Trasvina2025,
   bibtex_show={true},
+  abstract = {This study presents an innovative, computationally efficient, and flexible physically-based multi-model framework that couples three well-established state-of-the-art models: HYDRUS-1D (H1D) for vadose zone flow, KINEROS2 (K2) for overland flow, and MODFLOW-2005 (MF5) for groundwater flow. The coupled model, called H1D-K2-MF5, implements advanced techniques, such as dynamic time-stepping, dimensionality reduction, and adaptive pressure head boundary condition switching, to ensure precise simulations of flow processes and interactions among the three modeling domains. The model simulates flow processes at a hillslope scale, including runoff, infiltration, recharge, evapotranspiration, soil moisture redistribution, and groundwater dynamics. Model accuracy and functionality were tested and validated against benchmark simulations and by comparisons with the integrated watershed (IW) model ParFlow. The simulation domains include uniform and heterogeneous hillslopes, as well as a complex hillslope with pumping and stream-aquifer interactions. Simulated time series of outflow rates, soil water contents, groundwater heads, and water balance analyses demonstrated high accuracy and consistency with the IW model. The new model ran 17–20 times faster than ParFlow, demonstrating substantial computational efficiency. Results confirm the reliable exchange of water fluxes between the coupled model components due to the implementation of a boundary condition switching algorithm based on surface ponding, which enables realistic infiltration simulation, and the adjustment of vadose zone pressure heads, ensuring accurate recharge flux estimates. The modular design of the H1D-K2-MF5 model allows for flexible configuration between surface water, vadose zone, and groundwater components depending on specific study objectives, thereby enhancing its adaptability for diverse hydrological applications. Further developments will include the addition of reactive solute transport at hillslopes and extending to large-scale watersheds.},
+  doi = {10.1016/j.jhydrol.2025.133842},
+  issn = {00221694},
+  preview={2025-rahman_coupled_model.jpg},
+  year = {2025},
+  journal = {Journal of Hydrology},
+  title = {{A new externally coupled, physically-based multi-model framework for simulating subsurface and overland flow hydrological processes on hillslopes}},
+  author = {Rahman, ATM and Simunek, Jiri and Bradford, Scott and Ajami, Hoori and Meles, Menberu B. and Chen, Lin and Szymkiewicz, Adam and Pawlowicz, Mateusz and Acero Triana, Juan S. and Casillas-Trasvina, Alberto and Beegum, Sahila},
+  month = {jul},
+  pages = {133842},
+  url = {https://www.sciencedirect.com/science/article/pii/S0022169425011801?via%3Dihub},
+  volume = {661}
+}
+@article{Casillas-Trasvina2025,
+  bibtex_show={true},
   abstract = {The Turlock and Modesto subbasins in California’s Central Valley face critical groundwater sustainability challenges exacerbated by historical overdraft and recurrent drought. This study develops a high-resolution, integrated hydrologic model to enhance understanding of recharge processes, groundwater dynamics, and sustainable management strategies under the Sustainable Groundwater Management Act (SGMA). The model integrates spatially distributed Hydrogeologic Response Units (HGRUs) using HYDRUS-1D for variably saturated flow and MODFLOW-2005 for 3D groundwater flow, all at a high spatial resolution of 300 by 300 m. Key findings from this integrated method include spatially varying recharge rates ranging from 0.5 mm to 1460 mm per year across the model domain, with higher rates observed in cultivated areas dominated by almond, walnut and diverse grain crops and in regions associated with lakes and reservoirs. The study confirms intensive groundwater pumping in East Turlock as a significant driver of a regional cone of depression that impacts groundwater levels throughout the area. Advective particle tracking reveals faster flow paths from elevated recharge zones towards the cone of depression and groundwater residence times that range from 2 to 5000 years, with an average of 636 years. This research enhances the understanding of groundwater dynamics crucial for formulating effective management strategies under SGMA. By delineating recharge patterns and groundwater flow paths, this study provides water managers with actionable insights to optimize recharge efforts, prioritize areas for managed aquifer recharge, and develop targeted interventions to mitigate overdraft impacts and preserve aquifer resources in the Central Valley of California.},
   doi = {10.1016/j.jhydrol.2025.133377},
   issn = {00221694},
